# Zinfer

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yml  entrypoint.sh
include/data/: tensor.hpp
src/data/: tensor.cpp
tests/: CMakeLists.txt  test_main.cpp
tests/test_data/: test_create_tensor.cpp  test_get_values.cpp
